# marketdata

./: .gitignore  LICENSE  README.md  pyproject.toml
src/marketdata/: __init__.py  cache.py  calendar.py  compat.py  config.py  earnings_calendar.py  errors.py  manager.py  provider_settings.py  quality.py
src/marketdata/models/: __init__.py  bar.py  corporate_action.py  dividend.py  earnings.py  quote.py  snapshot.py  ticker_info.py
src/marketdata/providers/: __init__.py  alpaca.py  base.py  finnhub.py  ib.py  mock.py  polygon.py
src/marketdata/streaming/: __init__.py  base.py  binance.py  coinbase.py  ib.py  manager.py  polygon.py
tests/: conftest.py  test_cache.py  test_calendar.py  test_compat.py  test_earnings_calendar.py  test_ib_dividends.py  test_integration_polygon.py  test_manager.py  test_mock_provider.py  test_models.py  test_provider_settings.py  test_quality.py  test_streaming.py
