[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketdata"
version = "0.1.0"
description = "Unified market data SDK for US equities — multi-provider, caching, quality validation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AI-ORB"}]

dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
]

[project.optional-dependencies]
polygon = ["polygon-api-client>=1.12"]
alpaca = ["alpaca-py>=0.21"]
ib = ["ib_insync>=0.9"]
finnhub = ["finnhub-python>=2.4"]
all = [
    "polygon-api-client>=1.12",
    "alpaca-py>=0.21",
    "ib_insync>=0.9",
    "finnhub-python>=2.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marketdata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
